<resources>
    <!-- Navigation -->    
    <string name="app_name">SSA BizAppStore</string>
    <string name="search">Search</string>
        
    <string name="drawer_open">Open drawer navigation</string>
    <string name="drawer_close">Navigation drawer Close</string>

 	<string name="server_address">https://ssa-bas-project.googlecode.com/svn/</string>
 	<string name="app_link">app</string>
 	<string name="category_link">category</string>
 	<string name="app_category_link">appByCategory</string>
 	<string name="update_link">appupdate</string>
 	<string name="detail_link">appdetail</string>
 	<string name="detail_link_1">appdetail_1</string>
 	<string name="detail_link_2">appdetail_2</string>
 	<string name="detail_link_3">appdetail_3</string>
 	<string name="detail_link_4">appdetail_4</string>
 	<string name="search_link">search</string>
    <string name="is_new_day">75</string>

    <string name="application">Applications</string>
    <string name="category">Categories</string>
    <string name="update">Update</string>
    <string name="all">All</string>
    
    <string name="download">Download</string>
    <string name="downloadMsg">Do you want to download this application?</string>
    <string name="updatedMsg">Do you want to update this application?</string>
    <string name="updateAllMsg">Do you want to update all these applications?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    
    <string name="summary">Summary</string>
    <string name="description">Description</string>
    <string name="manual">Manual</string>
    <string name="review">Review</string>
    <string name="version">Version</string>
    <string name="rate_app">Rate app</string>
    <string name="write_review">Write a review</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="myapp">My App</string>
    <string name="latestversion">Latest Version</string>
    <string name="search_result">Search Result</string>
    <string name="no_list">No List</string>
    <string name="reviewWarnMsg">You should enter review or comment.</string>
</resources>