<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#D3D3D3" >

	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:paddingLeft="7dp"
  		android:layout_marginTop="10dp"
  		android:layout_marginBottom="10dp"
		android:text="@string/update"
		android:textColor="#413839"
        android:textSize="18dip"
        android:textStyle="bold" />
	
	<LinearLayout
	    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >
        
	    <TextView
	        android:id="@+id/noupdatelist"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dip"
	        android:layout_marginLeft="10dip"
	        android:ellipsize="end"
	        android:visibility="gone"
	        android:maxLines="1"
	        android:text="@string/no_list"
	        android:textColor="#413839"
	        android:textSize="18dip"
	        android:textStyle="bold" />
	    
        <ListView
            android:id="@+id/updatelistview"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:cacheColorHint="#00000000" >
	    </ListView>
	</LinearLayout>

	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:paddingLeft="7dp"
  		android:layout_marginTop="10dp"
  		android:layout_marginBottom="10dp"
		android:text="@string/latestversion"
		android:textColor="#413839"
        android:textSize="18dip"
        android:textStyle="bold" />
	
	<LinearLayout
	    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >
        
	    <TextView
	        android:id="@+id/noinstalledlist"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dip"
	        android:layout_marginLeft="10dip"
	        android:ellipsize="end"
	        android:visibility="gone"
	        android:maxLines="1"
	        android:text="@string/no_list"
	        android:textColor="#413839"
	        android:textSize="18dip"
	        android:textStyle="bold" />
        
        <ListView
            android:id="@+id/installedlistview"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:cacheColorHint="#00000000" >
	    </ListView>
	</LinearLayout>
    
</LinearLayout>
