<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f9f9f9"
    android:orientation="vertical"
	tools:context="com.sds.ssa.fragment.app.DetailActivity" >
	
	<RelativeLayout
	    android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:background="#d3d3d3" >

	    <ImageView
	        android:id="@+id/appIcon"
	        android:layout_width="80dp"
	        android:layout_height="80dp"
	        android:layout_centerVertical="true"
	        android:layout_margin="5dp"
	        android:background="@android:color/transparent"
	        android:padding="3dp" />
	        
		<TextView
			android:id="@+id/appname"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="15dip"
	        android:layout_toRightOf="@+id/appIcon"
	        android:ellipsize="end"
	        android:maxLines="1"
			android:text="name"
			android:textColor="@android:color/black"
			android:textSize="20dip"
			android:textStyle="bold" />
	
		<TextView
	        android:id="@+id/categoryname"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:layout_below="@+id/appname"
	        android:layout_toRightOf="@+id/appIcon"
	        android:layout_marginTop="40dip"
	        android:ellipsize="end"
	        android:maxLines="1"
	        android:text="categoryname"
	        android:textColor="@android:color/holo_blue_dark"
	        android:textSize="12dip"
	        android:textStyle="bold" />
		
		<Button
		    android:id="@+id/downloadBtn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentTop="true"
	        android:layout_centerVertical="true"
	        android:layout_marginRight="15dp"
	        android:text="install"
	        android:focusable="false"
	        android:focusableInTouchMode="false" />
			
	</RelativeLayout>
	
	<View
	    android:layout_width="fill_parent"
	    android:layout_height="1dp"
	    android:background="@android:color/holo_orange_dark"/>
	
    <ScrollView 
        android:id="@+id/myview"
    	android:orientation="vertical"
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent" >
        
        <LinearLayout 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" 
            android:orientation="vertical" > 

			<HorizontalScrollView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content">
			    
			    <LinearLayout
			        android:orientation="vertical"
			  		android:layout_width="wrap_content"
			  		android:layout_height="wrap_content">

					<LinearLayout
					    android:orientation="horizontal"
					  	android:layout_width="wrap_content"
					  	android:layout_height="wrap_content">

				        <ImageView
					        android:layout_width="wrap_content"
							android:layout_height="wrap_content"
					        android:src="@drawable/profile" />
				        
				        <ImageView
					        android:layout_width="wrap_content"
							android:layout_height="wrap_content"
					        android:src="@drawable/profile" />
				        
				        <ImageView
					        android:layout_width="wrap_content"
							android:layout_height="wrap_content"
					        android:src="@drawable/profile" />
				        
				        <ImageView
					        android:layout_width="wrap_content"
							android:layout_height="wrap_content"
					        android:src="@drawable/profile" />
				        
				        <ImageView
					        android:layout_width="wrap_content"
							android:layout_height="wrap_content"
					        android:src="@drawable/profile" />
				        
				        <ImageView
					        android:layout_width="wrap_content"
							android:layout_height="wrap_content"
					        android:src="@drawable/profile" />
				        
				        <ImageView
					        android:layout_width="wrap_content"
							android:layout_height="wrap_content"
					        android:src="@drawable/profile" />
				        
				        <ImageView
					        android:layout_width="wrap_content"
							android:layout_height="wrap_content"
					        android:src="@drawable/profile" />
				        
				        <ImageView
					        android:layout_width="wrap_content"
							android:layout_height="wrap_content"
					        android:src="@drawable/profile" />
				        				        
				        <ImageView
					        android:layout_width="wrap_content"
							android:layout_height="wrap_content"
					        android:src="@drawable/profile" />
				        				        				        
				        <ImageView
					        android:layout_width="wrap_content"
							android:layout_height="wrap_content"
					        android:src="@drawable/profile" />
					
					</LinearLayout>
				
				</LinearLayout>
			
			</HorizontalScrollView>
				    
			<TextView
			    android:id="@+id/summarytext"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_toLeftOf="@+id/summarytext"
				android:text="@string/summary"
				android:textColor="@android:color/black"
		        android:textSize="15dip"
		        android:textStyle="bold" />
						        
		    <TextView
		        android:id="@+id/appsummary"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_below="@+id/apptitle"
		        android:layout_margin="5dp"
		        android:text="Summary"
		        android:textColor="@android:color/black" />
		    
		    <TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/description"
				android:textColor="@android:color/black"
		        android:textSize="15dip"
		        android:textStyle="bold" />
		    			
		    <TextView
		        android:id="@+id/appdesc"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_below="@+id/appsummary"
		        android:layout_margin="5dp"
		        android:text="Descrption"
		        android:textColor="@android:color/black" />
		    
		    <TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/manual"
				android:textColor="@android:color/black"
		        android:textSize="15dip"
		        android:textStyle="bold" />
		    			
		    <TextView
		        android:id="@+id/appmanual"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_below="@+id/appdesc"
		        android:layout_margin="5dp"
		        android:text="Manual"
		        android:textColor="@android:color/black" />
		
		    <ProgressBar
		        android:id="@+id/pbardesc"
		        style="@android:style/Widget.ProgressBar.Small.Inverse"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_margin="35dp" />
		
		</LinearLayout>
    
    </ScrollView>

</LinearLayout>